--- a/app/states/root/_root_styles.scss
+++ b/app/states/root/_root_styles.scss
@@ -55,6 +55,14 @@
 		width: 250px;
 		height: 280px;
 	}
+
+	.sub-sort-wrapper
+	{
+		@media ( max-width: 935px )
+		{
+			display: none;
+		}
+	}
 }
 
 .black-background
